--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
     <style>
+        /* ===== GLOBAL ===== */
+        * {
+            cursor: none;
+        }
+
         body {
             font-family: 'Inter', sans-serif;
             background: radial-gradient(circle at top, #1e293b, #020617);
             color: #e5e7eb;
         }
 
+        /* ===== CARD ===== */
         .card-password {
             background: #1e293b;
             border-radius: 18px;
@@ -25,6 +31,12 @@
             width: 100%;
             max-width: 420px;
             box-shadow: 0 25px 50px rgba(0,0,0,0.6);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card-password:hover {
+            transform: translateY(-6px);
+            box-shadow: 0 35px 70px rgba(0,0,0,0.8);
         }
 
         h1 {
@@ -36,7 +48,7 @@
         }
 
         label {
-            font-size: 0.8rem;
+            font-size: 0.75rem;
             letter-spacing: 1px;
             color: #cbd5f5;
         }
@@ -57,6 +69,7 @@
             box-shadow: 0 0 0 2px rgba(56,189,248,0.25);
         }
 
+        /* ===== BUTTON ===== */
         .btn-generate {
             background: linear-gradient(135deg, #38bdf8, #0ea5e9);
             border: none;
@@ -70,23 +83,49 @@
             filter: brightness(1.1);
         }
 
-        .btn-save {
+        .btn-copy {
             background: transparent;
             border: 1px solid #38bdf8;
             color: #38bdf8;
             border-radius: 12px;
+            transition: all 0.3s ease;
         }
 
-        .btn-save:hover {
+        .btn-copy:hover {
             background: #38bdf8;
             color: #020617;
         }
 
         .footer-text {
             text-align: center;
-            font-size: 0.75rem;
+            font-size: 0.7rem;
             margin-top: 18px;
             color: #94a3b8;
+            letter-spacing: 1px;
+        }
+
+        /* ===== CURSOR ===== */
+        .custom-cursor {
+            width: 14px;
+            height: 14px;
+            border: 2px solid #38bdf8;
+            border-radius: 50%;
+            position: fixed;
+            pointer-events: none;
+            transform: translate(-50%, -50%);
+            z-index: 9999;
+            transition: transform 0.08s ease;
+        }
+
+        /* ===== STAR TRAIL ===== */
+        .star {
+            position: fixed;
+            pointer-events: none;
+            font-size: 12px;
+            color: #38bdf8;
+            opacity: 0.8;
+            transform: translate(-50%, -50%);
+            z-index: 9998;
         }
     </style>
 </head>
@@ -97,34 +136,117 @@
         <h1>PASSWORD GENERATOR</h1>
 
         <div class="mb-3">
-            <label for="passwordLength" class="text-uppercase fw-bold">Panjang Password</label>
-            <input type="number" class="form-control form-control-lg mt-1"
-                   id="passwordLength" placeholder="Contoh: 8">
+            <label class="text-uppercase fw-bold">Panjang Password</label>
+            <input type="number" id="passwordLength"
+                   class="form-control form-control-lg mt-1"
+                   placeholder="Contoh: 8">
         </div>
 
         <div class="mb-3">
-            <label for="password" class="text-uppercase fw-bold">Password</label>
-            <input type="text" class="form-control form-control-lg mt-1"
-                   id="password" readonly>
+            <label class="text-uppercase fw-bold">Password</label>
+            <input type="text" id="password"
+                   class="form-control form-control-lg mt-1"
+                   readonly>
         </div>
 
         <button class="btn btn-lg w-100 fw-bold text-uppercase btn-generate"
-                onclick="getPassword()">
+                onclick="generatePassword()">
             Generate Password
         </button>
 
-        <button class="btn btn-lg w-100 fw-bold text-uppercase mt-2 btn-save"
-                onclick="savePassword()">
-            Save Password
+        <button class="btn btn-lg w-100 fw-bold text-uppercase mt-2 btn-copy"
+                onclick="copyPassword()">
+            Copy Password
         </button>
 
         <div class="footer-text">
-            Secure • Comfortable • Modern
+            SECURE • MODERN • CONTROLLED
         </div>
     </div>
 </div>
 
-<script src="index.js"></script>
+<!-- Cursor & Stars -->
+<div class="custom-cursor" id="cursor"></div>
+<div class="star">✦</div>
+<div class="star">✧</div>
+<div class="star">✦</div>
+<div class="star">✧</div>
+<div class="star">✦</div>
+
+<script>
+    /* ===== PASSWORD ===== */
+    function generatePassword() {
+        const length = parseInt(document.getElementById("passwordLength").value);
+        const output = document.getElementById("password");
+
+        if (!length || length < 4) {
+            output.value = "Invalid length";
+            return;
+        }
+
+        const chars =
+            "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^&*()_+-=[]{}<>?";
+        let result = "";
+
+        for (let i = 0; i < length; i++) {
+            result += chars[Math.floor(Math.random() * chars.length)];
+        }
+
+        output.value = result;
+    }
+
+    function copyPassword() {
+        const password = document.getElementById("password");
+        if (!password.value) return;
+        navigator.clipboard.writeText(password.value);
+    }
+
+    /* ===== CURSOR + STAR TRAIL ===== */
+    const cursor = document.getElementById("cursor");
+    const stars  = document.querySelectorAll(".star");
+
+    let mouseX = 0, mouseY = 0;
+    const positions = Array.from(stars).map(() => ({ x: 0, y: 0 }));
+
+    document.addEventListener("mousemove", e => {
+        mouseX = e.clientX;
+        mouseY = e.clientY;
+
+        cursor.style.left = mouseX + "px";
+        cursor.style.top  = mouseY + "px";
+    });
+
+    function animateTrail() {
+        let x = mouseX;
+        let y = mouseY;
+
+        positions.forEach((pos, i) => {
+            pos.x += (x - pos.x) * 0.25;
+            pos.y += (y - pos.y) * 0.25;
+
+            stars[i].style.left = pos.x + "px";
+            stars[i].style.top  = pos.y + "px";
+            stars[i].style.opacity = 1 - i * 0.15;
+
+            x = pos.x;
+            y = pos.y;
+        });
+
+        requestAnimationFrame(animateTrail);
+    }
+
+    animateTrail();
+
+    document.querySelectorAll("button, input").forEach(el => {
+        el.addEventListener("mouseenter", () => {
+            cursor.style.transform = "translate(-50%, -50%) scale(1.6)";
+        });
+        el.addEventListener("mouseleave", () => {
+            cursor.style.transform = "translate(-50%, -50%) scale(1)";
+        });
+    });
+</script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
