--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             pointer-events: none;
             transform: translate(-50%, -50%);
             z-index: 9999;
-            transition: transform 0.08s ease;
+            transition: transform 0.08s ease, opacity 0.2s ease;
         }
 
         /* ===== STAR TRAIL ===== */
@@ -123,9 +123,14 @@
             pointer-events: none;
             font-size: 12px;
             color: #38bdf8;
-            opacity: 0.8;
             transform: translate(-50%, -50%);
             z-index: 9998;
+            transition: opacity 0.2s ease;
+        }
+
+        /* ===== HIDDEN STATE ===== */
+        .cursor-hidden {
+            opacity: 0;
         }
     </style>
 </head>
@@ -166,12 +171,12 @@
 </div>
 
 <!-- Cursor & Stars -->
-<div class="custom-cursor" id="cursor"></div>
-<div class="star">✦</div>
-<div class="star">✧</div>
-<div class="star">✦</div>
-<div class="star">✧</div>
-<div class="star">✦</div>
+<div class="custom-cursor cursor-hidden" id="cursor"></div>
+<div class="star cursor-hidden">✦</div>
+<div class="star cursor-hidden">✧</div>
+<div class="star cursor-hidden">✦</div>
+<div class="star cursor-hidden">✧</div>
+<div class="star cursor-hidden">✦</div>
 
 <script>
     /* ===== PASSWORD ===== */
@@ -214,7 +219,18 @@
 
         cursor.style.left = mouseX + "px";
         cursor.style.top  = mouseY + "px";
+
+        cursor.classList.remove("cursor-hidden");
+        stars.forEach(star => star.classList.remove("cursor-hidden"));
     });
+
+    document.addEventListener("mouseleave", hideCursor);
+    window.addEventListener("blur", hideCursor);
+
+    function hideCursor() {
+        cursor.classList.add("cursor-hidden");
+        stars.forEach(star => star.classList.add("cursor-hidden"));
+    }
 
     function animateTrail() {
         let x = mouseX;
